[package]
name = "r-mime"
version = "0.1.0"
authors = ["zikwall <andrey.kapitonov.96@gmail.com>"]
edition = "2018"
repository = "https://github.com/zikwall/r-mime"
readme = "README.md"
description="MIME type definition library"
homepage = "https://github.com/zikwall/r-mime"
license="MIT OR Apache-2.0"

[lib]
name = "mime"
path = "src/lib.rs"

[[bin]]
name = "mime"
path = "src/main.rs"

[dependencies]
